<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
            android:id="@+id/to_settings_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_settings_text"
            android:textSize="16sp"
            android:layout_margin="16dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:lineSpacingExtra="4dp"
            android:padding="16dp"
            android:visibility="visible"/>
    <Button
            android:id="@+id/to_settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to_settings_button"
            android:visibility="visible"/>
    <Button
            android:id="@+id/usb_exchange_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exchange_usb_data"
            android:visibility="gone"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usb_action_status"
            android:visibility="gone"/>
    <TextView
            android:id="@+id/usbconnection_response_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

</LinearLayout>