<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".TransportWifiDirectFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
            android:id="@+id/my_wifi_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_wifi_info" />
    <TextView
            android:id="@+id/my_wifi_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:text="@string/device_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        <TextView
                android:id="@+id/device_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <CheckBox
                android:id="@+id/collect_background_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        <TextView
            android:text="Collect data even when app is closed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
            android:id="@+id/change_device_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
                android:text="@string/phone_name_must_start_with_ddd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        <Button
                android:id="@+id/name_change_button"
                android:text="@string/change_phone_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/interactions_with_bundleclients" />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">

        <TextView
                android:id="@+id/client_log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
    </ScrollView>
</LinearLayout>